# invoice-agent

./: .gitignore  MANIFEST.in  README.md  __init__.py  env.example  main.py  pyproject.toml  requirements.txt  run_agent.py  setup.py  setup_environment.sh
agent/: __init__.py  agent.py  cli.py  invoice_agent.py  test_date_parser.py  test_description_formatting.py
agent/core/: __init__.py  invoice_processor.py  llm_client.py
agent/domain/: __init__.py  models.py
agent/services/: __init__.py  date_parser.py  description_formatter.py  metadata_service.py
examples/: example_usage.py  metadata_demo.py
server/: README.md  config.py  dependencies.py  server.py  start_server.py
server/api/: __init__.py  models.py  routes.py
server/application/: __init__.py  interfaces.py  use_cases.py
server/domain/: __init__.py  entities.py
server/infrastructure/: __init__.py  invoice_agent_service.py  repositories.py
server/tests/: test_api.py
